<resources>
    <string name="app_name">Money Drop</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="tasks">Tasks</string>
    <string name="profile">Profile</string>
    <string name="verification_code">Verification code</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="spin_and_earn">Spin</string>
    <string name="withdraw">Withdraw Money</string>
    <string name="click_here_and_click_on_the_ads_to_earn_coins">Click Here and click on the ads to earn coins</string>
    <string name="please_connect_to_vpn_and_select_county_united_states">Please close the app and to VPN and select county United States</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="logout">Logout</string>
</resources>